Footer component added, fixed header overflow

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -4,11 +4,8 @@
   width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
-}
-.header-logo {
-  padding-left: 40px;
 }
 .header-logo img {
   height: 90px;
@@ -22,7 +19,7 @@ li {
   display: table-cell;
 }
 a {
-  color: #fff;
+  color: var(--light);
   text-transform: uppercase;
   text-decoration: none;
   font-size: 18px;
@@ -35,7 +32,7 @@ a:after {
   display: block;
   height: 2px;
   left: 50%;
-  background: #fff;
+  background: var(--light);
   transition: width 0.3s ease 0s, left 0.3s ease 0s;
   width: 0;
 }
